--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,9 +1,9 @@
 %!TEX root = ../paper.tex
 % Our development suggests two predictions that could be used to test the theory described here. One is that,
 \section{Conclusion}
-Our analysis predicts that, in general, an ensemble of systems where robustness has been the predominant object of selection and has been positively selected over a sufficiently long period of time should exhibit a bias toward more hierarchical network topologies. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their dynamical robustness \cite{Zhao2006,Bhardwaj2010,Colm}. At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been observed to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}.
+Our analysis predicts that, in general, an ensemble of systems where robustness has been the predominant object of selection and has been positively selected over a sufficiently long period of time should exhibit a bias toward more hierarchical network topologies. Given the manner in which we define robustness in \ref{eq:robustnessfromstoch}, this is a very general constraint. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their dynamical robustness as we have defined it here \cite{Zhao2006,Bhardwaj2010,Colm}. At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been observed to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}.
 %The other prediction of the theory outlined here that may be able to be checked is the converse statement that an ensemble of systems demonstrating a positive or negative bias in their network topology toward hierarchy may have been under selection for, or respectively against, robustness. Of course, in this case, factors other than selection for robustness would not be ruled out by this analysis alone.
-In the long term, this prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that differentially select for dynamical robustness \cite{Leroi1994}.
+In the long term, this prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that impose differential selection strengths for dynamical robustness \cite{Leroi1994}.
 
 %The fact that such a relationship exists has the potential to unify our understanding of biological networks.
 In order to further this work from a theoretical perspective, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology. Following May \cite{Cohen1984,May1972a,Radius2014,Majumdar2014}, this will involve improving the general understanding of the relationship between perturbations to a system's structure and the qualitative changes in the dynamical phenomena it can produce. The conservation of robustness with respect to nontrivial symmetries including the interchange of SCCs and permutation within SCCs suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may thus help to characterize this potential evolutionary constraint \cite{Golubitsky2006}.
