move equation label to correct location

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -244,11 +244,11 @@ To relate the robustness of a graph to the robustness of its SCCs, we substitute
 {\int \prod\limits_{k \in C_\alpha} dk\, \rho(a_k) \mathcal{S}(\pi_{C_{\alpha}}(A))} \\
 &= R(C_{\alpha}, S, \mu_\alpha, \tau^{(1)}_\alpha)
 \end{aligned}
-\end{equation}\label{eq:robustncessforsccconnect}
+\end{equation}
 \end{widetext}
 where $\mu_\alpha$ and $\tau^{(1)}_\alpha$ refer to the analogues of \ref{eq:singleresamplemutau} for the subgraph $C_\alpha$ of $G$. \ref{eq:robustncessforsccs} shows that the terms in the sum over the elements of $A$, or equivalently the edges of $G$, that comprise a given SCC of $G$ reduce to the robustness of that SCC alone.  Likewise, when $i \in L$, we have
 \begin{widetext}
-\begin{equation}
+\begin{equation}\label{eq:robustncessforsccconnect}
 \begin{aligned}
 \frac{\int d\mu(A) d\tau^{(1)}_i (A' \mid A) \mathcal{S}(A) \mathcal{S}(A')}
        {\int d\mu(A) \mathcal{S}(A)}
